# src/main/java/org/servament/dto/CreateBookingDTO.java
@@ -1,0 +1,20 @@
+package org.servament.dto;
+
+import java.util.UUID;
+
+import jakarta.validation.constraints.NotNull;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+public class CreateBookingDTO {
+
+    @NotNull
+    private UUID event;
+
+    @NotNull
+    private UUID consumer;
+}
