# src/main/java/org/servament/resource/BookingResource.java
@@ -6,6 +6,7 @@ import java.util.Set;
 import java.util.UUID;
 
 import org.servament.dto.BookingDTO;
+import org.servament.dto.CreateBookingDTO;
 import org.servament.model.BookingStatus;
 import org.servament.model.Pagination;
 import org.servament.model.filter.BookingFilter;
@@ -16,6 +17,7 @@ import io.quarkus.hibernate.reactive.panache.common.WithSession;
 import io.smallrye.mutiny.Uni;
 import jakarta.enterprise.context.RequestScoped;
 import jakarta.inject.Inject;
+import jakarta.ws.rs.Consumes;
 import jakarta.ws.rs.DELETE;
 import jakarta.ws.rs.GET;
 import jakarta.ws.rs.PATCH;
@@ -28,7 +30,6 @@ import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
 
 @Path("/")
-@Produces(MediaType.APPLICATION_JSON)
 @RequestScoped
 @WithSession
 public class BookingResource {
@@ -42,6 +43,7 @@ public class BookingResource {
 
     @GET
     @Path("/bookings")
+    @Produces(MediaType.APPLICATION_JSON)
     public Uni<List<BookingDTO>> list(
         @QueryParam("events") Set<UUID> events,
         @QueryParam("statuses") Set<BookingStatus> statuses,
@@ -58,6 +60,7 @@ public class BookingResource {
 
     @GET
     @Path("/bookings:paged")
+    @Produces(MediaType.APPLICATION_JSON)
     public Uni<Pagination<BookingDTO>> paginated(
         @QueryParam("events") Set<UUID> events,
         @QueryParam("statuses") Set<BookingStatus> statuses,
@@ -73,14 +76,17 @@ public class BookingResource {
 
     @GET
     @Path("/bookings/{id}")
+    @Produces(MediaType.APPLICATION_JSON)
     public Uni<BookingDTO> findById(@PathParam("id") Long id) {
         return this.bookingService.find(id);
     }
 
     @POST
     @Path("/booking")
-    public Uni<BookingDTO> create() {
-        throw new UnsupportedOperationException();
+    @Consumes(MediaType.APPLICATION_JSON)
+    @Produces(MediaType.APPLICATION_JSON)
+    public Uni<BookingDTO> create(CreateBookingDTO createBookingDTO) {
+        return this.bookingService.create(createBookingDTO);
     }
 
     @PATCH
